--- a/DisplayModule/nbproject/project.properties
+++ b/DisplayModule/nbproject/project.properties
@@ -24,12 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Modulo_visualizacion.jar
+dist.jar=${dist.dir}/DisplayModule.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.j3dcore.jar=C:\\Program Files (x86)\\Java\\Java3D\\1.4.0_01\\lib\\ext\\j3dcore.jar
-file.reference.j3dutils.jar=C:\\Program Files (x86)\\Java\\Java3D\\1.4.0_01\\lib\\ext\\j3dutils.jar
-file.reference.vecmath.jar=C:\\Program Files (x86)\\Java\\Java3D\\1.4.0_01\\lib\\ext\\vecmath.jar
+file.reference.j3dcore.jar=../../../../Program Files (x86)/Java/Java3D/1.4.0_01/lib/ext/j3dcore.jar
+file.reference.j3dutils.jar=../../../../Program Files (x86)/Java/Java3D/1.4.0_01/lib/ext/j3dutils.jar
+file.reference.vecmath.jar=../../../../Program Files (x86)/Java/Java3D/1.4.0_01/lib/ext/vecmath.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=modulo_visualizacion.Modulo_visualizacion
+main.class=displaymodule.DisplayModule
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
