--- a/VisualizationModule/nbproject/project.properties
+++ b/VisualizationModule/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DisplayModule.jar
+dist.jar=${dist.dir}/VisualizationModule.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.j3dcore.jar=../../../../Program Files (x86)/Java/Java3D/1.4.0_01/lib/ext/j3dcore.jar
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=displaymodule.DisplayModule
+main.class=visualizationmodule.VisualizationModule
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
