Added zoom limit #2

--- a/VisualizationModule/build.xml
+++ b/VisualizationModule/build.xml
@@ -70,4 +70,16 @@
     nbproject/build-impl.xml file. 
 
     -->
+    
+    <target name="-post-jar">
+        <property name="pack.jar" value="dist/${application.title}.pack.jar"/>
+        <echo message="Packaging into a single JAR at ${pack.jar}"/>
+        <jar jarfile="${pack.jar}">
+            <zipfileset src="${dist.jar}" excludes="META-INF/*" />
+            <zipgroupfileset dir="dist/lib" includes="*.jar" excludes="META-INF/*"/>
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}"/>
+            </manifest>
+        </jar>
+    </target>
 </project>
