--- a/VisualizationModule/build.xml
+++ b/VisualizationModule/build.xml
@@ -71,15 +71,24 @@
 
     -->
     
-    <target name="-post-jar">
-        <property name="pack.jar" value="dist/${application.title}.pack.jar"/>
-        <echo message="Packaging into a single JAR at ${pack.jar}"/>
-        <jar jarfile="${pack.jar}">
-            <zipfileset src="${dist.jar}" excludes="META-INF/*" />
-            <zipgroupfileset dir="dist/lib" includes="*.jar" excludes="META-INF/*"/>
-            <manifest>
-                <attribute name="Main-Class" value="${main.class}"/>
-            </manifest>
-        </jar>
-    </target>
+<target name="package-for-store" depends="jar">
+    <property name="store.jar.name" value="VisualizationModule"/>
+    <property name="store.dir" value="store"/>
+    <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+    <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+    <delete dir="${store.dir}"/>
+    <mkdir dir="${store.dir}"/>
+    <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+        <zipgroupfileset dir="dist" includes="*.jar"/>
+        <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+        <manifest>
+            <attribute name="Main-Class" value="${main.class}"/>
+        </manifest>
+    </jar>
+    <zip destfile="${store.jar}">
+        <zipfileset src="${store.dir}/temp_final.jar"
+        excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+    </zip>
+    <delete file="${store.dir}/temp_final.jar"/>
+</target>
 </project>
